--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,7 @@ Most recent revision:
         </nav>
 
         <section>
-            <article id="about-me"></article>
+            <article id="about-me">
                 <h2><em>About Me</em></h2>
                 <img src="images/cam.jpg" alt="Picture of Cam">
                 <p>I was born in Edmonton and moved to St.Albert when I was 6 years old.  I currently live
@@ -33,7 +33,7 @@ Most recent revision:
                 to finally have a job that I find enjoyment in by doing the things I love.</strong></p>
             </article>
 
-            <article id="past-experiences"></article>
+            <article id="past-experiences">
                 <h2><em>Past Experiences</em></h2>
                 <img src="images/cats.jpg" alt="Picture of Cats">
                 <table>
@@ -43,9 +43,11 @@ Most recent revision:
                         <th>Title</th>
                         <th>Company</th>
                     </tr>
+                    <tr>
                         <td>2022-Present</td>
                         <td>Apprentice</td>
                         <td>The Software Guild</td>
+                    </tr>
                     <tr>
                         <td>2020-Presnt</td>
                         <td>Warehouse Worker</td>
